[workspace]
members=["crates/encryption/comptx", "crates/encryption/keys"]
resolver="3"

[workspace.package]
license = "MPL-2.0"
description = "The end-to-end-encrypted API for portal solutions"

[workspace.dependencies]
x-wing = "0.1.0-pre.2"
slh-dsa = "0.2.0-rc.4"
sha3 = { version = "0.11.0-rc.7", default-features = false }
zeroize = { version = "1.8.1", features = ["derive"] }
base64 = { version = "0.22.1", default-features = false }
either = { version = "1.15.0", default-features = false }
